--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
 
           <div *ngFor="let r of rooms">
 
-            <app-sala [room]="r"></app-sala>
+            <app-sala [room]="r" [current]="your"></app-sala>
 
           </div>
         </div>
