--- a/angularHEFE/src/styles.css
+++ b/angularHEFE/src/styles.css
@@ -777,12 +777,14 @@ mat-grid-list {
   font-size: 18px;
   letter-spacing: 1px;
   margin: 10px 0;
+  text-align: start;
 }
 
 .room-container .course h4 {
   font-size: 14px;
   letter-spacing: 1px;
   margin: 10px 0;
+  text-align: start;
 }
 
 .room-container .preview {
@@ -853,7 +855,7 @@ mat-grid-list {
   font-size: 12px;
   font-weight: bold;
   opacity: 0.7;
-
+  text-align: start;
 }
 
 .room-container .btn-details {
