--- a/angularHEFE/src/app/components/details-room/details-room.component.css
+++ b/angularHEFE/src/app/components/details-room/details-room.component.css
@@ -7,8 +7,8 @@
 }
 
 .home-user .contentDetails {
-  height: 100vh;
-  background: #181818;
+  min-height: 100vh;
+  background:#18191a;
   position: inherit;
 }
 
@@ -133,7 +133,10 @@
   cursor: pointer;
 }
 
-
+.worldVirtual button:hover,
+.worldVirtual .active-header-btn{
+  border-color: #e40046 !important;
+}
 
 #chat{
   max-width: 1100px;
