--- a/angularHEFE/src/app/components/details-room/details-room.component.html
+++ b/angularHEFE/src/app/components/details-room/details-room.component.html
@@ -18,32 +18,36 @@
               <p>{{numberMembersActive}} / {{dataRoom.maxParticipantes}} </p>
               <div class="worldVirtual">
                 <button (click)="back()">
-                  <img src="../../../assets/images/atras.svg" alt="Mundo Virtual">
+                  <img src="../../../assets/images/atras.svg" alt="Atras">
                   <p>Atras</p>
+                </button>
+
+                <button (click)="changeView(2)" [ngClass]="{'active-header-btn' : members}">
+                  <img src="../../../assets/images/grupo.svg" alt="Miembros">
+                  <p>Miembros</p>
+                </button>
+                <button (click)="changeView(1)" [ngClass]="{'active-header-btn' : topics}">
+                  <img src="../../../assets/images/temas.svg" alt="Temas">
+                  <p>Temas</p>
                 </button>
                 <button (click)="getListTopics()">
                   <img src="../../../assets/images/virtual-reality.svg" alt="Mundo Virtual">
                   <p>Mundo Virtual</p>
                 </button>
-                <button>
-                  <img src="../../../assets/images/temas.svg" alt="Mundo Virtual">
-                  <p>Temas</p>
-                </button>
-                <button>
-                  <img src="../../../assets/images/grupo.svg" alt="Mundo Virtual">
-                  <p>Integrantes</p>
-                </button>
               </div>
             </div>
           </div>
           
-          <h2 class="titleDetails">Integrantes de la sala</h2>
-          <div class="itemSearch">
-            <input matInput (keyup)="applyFilter($event)" placeholder="Nombre..." #input>
+          <h2 class="titleDetails" style="margin: 25px; font-size: 14px;">{{encabezado}}</h2>
+          <div class="itemSearch" style="margin: 10px;">
+
+            <input #input  matInput (keyup)="definirFiltro($event)" placeholder="Buscar.." >
+
           </div>
         </mat-form-field>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 tableDetails">
+        <div *ngIf="members">
+        <table  mat-table [dataSource]="dataSource" class="mat-elevation-z8 tableDetails">
 
           <!-- Position Column -->
           <ng-container matColumnDef="photoURL">
@@ -84,11 +88,42 @@
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4" align="center">
-              <div *ngIf="!numberMembersActive == 0"> No hay miembro en la sala con llamado: "{{input.value}}"</div>
-              <div *ngIf="numberMembersActive == 0"> Aun no hay integrantes en esta sala </div>
+              <div *ngIf="!numberMembersActive == 0"> Sin resultados para: "{{input.value}}"</div>
+              <div *ngIf="numberMembersActive == 0"> Aun no hay miembros en esta sala </div>
             </td>
           </tr>
         </table>
+      </div>
+
+        <div *ngIf="topics">
+          <table  mat-table [dataSource]="dataTopicSource" class="mat-elevation-z8 tableDetails">
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="tema">
+              <th mat-header-cell *matHeaderCellDef> Tema </th>
+              <td mat-cell *matCellDef="let element"> {{element.tema}} </td>
+            </ng-container>
+  
+            <!-- Weight Column -->
+            <ng-container matColumnDef="descripcion">
+              <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+              <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+            </ng-container>
+  
+
+  
+            <tr mat-header-row *matHeaderRowDef="displayedTopicColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedTopicColumns;"></tr>
+  
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4" align="center">
+                <div *ngIf="!topicList == 0"> Sin resultados para: "{{input.value}}"</div>
+                <div *ngIf="topicList == 0"> Aun no hay miembros en esta sala </div>
+              </td>
+            </tr>
+          </table>        
+        </div>
     </div>
   </div>
 
