--- a/angularHEFE/src/app/components/profile/profile.component.html
+++ b/angularHEFE/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="home-user">
-  <input type="checkbox" id="check">
+  <input type="checkbox" id="check" checked="true">
   <app-header [status]="'principal'"></app-header>
 
 
