--- a/angularHEFE/src/app/components/home/home.component.html
+++ b/angularHEFE/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-user" *ngIf="ready && user && rooms; else Load">
 
-  <input type="checkbox" id="check" >
+  <input type="checkbox" id="check" checked="true" >
   <app-header [status]="'principal'" ></app-header>
 
 
