--- a/angularHEFE/src/app/components/sala/sala.component.html
+++ b/angularHEFE/src/app/components/sala/sala.component.html
@@ -10,7 +10,7 @@
           <span class="progress-text">{{numberMembers}}/{{room.maxParticipantes}} participantes</span>
         </div>
         <h2>{{room.nombre}}</h2>
-        <h4 *ngIf="current == 'your'">{{room.id}}</h4>
+        <h4>{{room.id}}</h4>
         <div class="trunc">
           <P class="p-trunc">
             {{room.descripcion}}
