DISEÑO DE EMAIL Y PLANTILLA FINALIZADO

--- a/backend/views/deleteStudent.hbs
+++ b/backend/views/deleteStudent.hbs
@@ -1,6 +1,6 @@
 <div class="headerEmail">
     <div class="containerTitle">
-        <img src="" alt="LOGO bien shido">
+        <img src="https://firebasestorage.googleapis.com/v0/b/virtual-city-eb37f.appspot.com/o/emails%2FlogoClaro.png?alt=media&token=182e8528-7cfa-482b-bee8-79105c4c3fae" alt="LOGO bien shido">
         <h1>SISTEMA DE REPORTES HIPEREFE</h1>
     </div>
 </div>
@@ -20,7 +20,7 @@
     <div class="contactWeb">
         <div class="centerItem">
             <div class="contentLogo2">
-                <img src="cid:loge2">
+                <img src="https://firebasestorage.googleapis.com/v0/b/virtual-city-eb37f.appspot.com/o/emails%2FlogoAzul.png?alt=media&token=11cc15fc-9c5c-4803-aa22-26320ed43fa0">
             </div>
             <div class="contentText">
                 <h3>Contactanos</h3>
