--- a/backend/views/layout/main.hbs
+++ b/backend/views/layout/main.hbs
@@ -25,19 +25,18 @@
 .headerEmail .containerTitle{
     padding-top: 25px;
     display: flex;
-    justify-content: center;
+    margin-left: 20%;
 }
 .headerEmail .containerTitle h1 {
-    text-align: center;
     color: white;
     font-size: 30px;
     padding-top: 0px;
     width: 75%;
+    margin-left: 10px;
 }
-.emailConteiner header .containerTitle img {
+.headerEmail .containerTitle img {
     width: 50px;
     height: 50px;
-    margin-right: 15px;
 }
 
 .sectionMsg .centerItem img{
@@ -76,15 +75,15 @@
     background: #161616;
     width: 100%;
     color: white;
-    height: 20vh;
+    height: 135px;
     align-items: center;
 }
-.contactWeb .centerItem{
-    align-items: center;
+.contactWeb .centerItem {
+    align-items: center !important;
 }
 .contentIcon img{
-    width: 35px;
-    height: 35px;
+    width: 35px !important;
+    height: 35px !important;
     margin-left: 5px;
 }
 .contactWeb .endItem img{
@@ -93,9 +92,14 @@
 
 .contactWeb .centerItem .contentLogo2 {
     margin-right: 10px;
+    margin-top: 35px;
 }
 .contactWeb .centerItem .contentIcon {
     margin-left: 8px;
+}
+
+.contactWeb .centerItem .contentText {
+    margin-top: 35px;
 }
 .contactWeb .centerItem .contentText h3{
     font-size: 20px;
@@ -106,6 +110,10 @@
 .contactWeb .centerItem .contentText h5 {
     margin-top: 0px;
     font-size: 12px
+}
+
+.contactWeb .centerItem .contentIcon {
+    margin-top: 50px;
 }
 </style>
 </head>
