Arreglo de botones: Details Room

--- a/angularHEFE/src/app/components/details-room/details-room.component.css
+++ b/angularHEFE/src/app/components/details-room/details-room.component.css
@@ -117,7 +117,7 @@
   border: solid 4px;
   border-color: #fff;
   border-radius: 20px;
-  width: 10%;
+  width: 100px;
   padding: 0;
   margin-left: 10px;
   height: 70px;
